--- a/source/ui/src/main/content/jcr_root/apps/aemtoolbox/widgets/RTEBlockquotePlugin/source/css/RTEBlockquote.css
+++ b/source/ui/src/main/content/jcr_root/apps/aemtoolbox/widgets/RTEBlockquotePlugin/source/css/RTEBlockquote.css
@@ -6,3 +6,7 @@
     background-image: url(/etc/designs/aemtoolbox/images/icons/lined-blockquote.png);
     background-position: 1px 2px;
 }
+#CQ .x-html-editor-tb .x-edit-ulinedblockquote{
+    background-image: url(/etc/designs/aemtoolbox/images/icons/introduction.png);
+    background-position: 1px 2px;
+}
