--- a/source/ui/src/main/content/jcr_root/apps/aemtoolbox/touchui/YoutubeSearch/ytsearchlib/source/css/youtubesearch.css
+++ b/source/ui/src/main/content/jcr_root/apps/aemtoolbox/touchui/YoutubeSearch/ytsearchlib/source/css/youtubesearch.css
@@ -1,172 +1,116 @@
 /* youtubesearch.form.styl */
 
 .coral-Form--vertical .coral-Form-field.coral-Youtubesearch{
-	display: block;
-	width: 100%;
+    display: block;
+    width: 100%;
 }
 
 /* youtubesearch.styl */
 
 .coral-Youtubesearch {
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	width: 12.5rem;
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    width: 12.5rem;
 }
 
 .coral-Youtubesearch > .coral-InputGroup {
-	width: 100%;
+    width: 100%;
 }
 
 .coral-Youtubesearch > .coral-TagList {
-	margin-top: .4375rem;
+    margin-top: .4375rem;
 }
 
-.coral-Youtubesearch-picker-coral-backdrop {
-	z-index: 1441;
+.coral-Youtubesearch-picker-backdrop {
+    z-index: 1441;
 }
-.coral-backdrop {
-	z-index: 1441;
-}
+
 .coral-Youtubesearch-picker {
-	width: 60%;
-	height: 60%;
-	z-index: 1442;
+    width: 60%;
+    height: 60%;
+    z-index: 1442;
 }
 
 .coral-Youtubesearch-picker .coral-Modal-header {
-	height: 3.3125rem;
+    height: 3.3125rem;
 }
 
-.coral-Youtubesearch-picker .coral-Modal-header .coral3-Button {
-	float: left;
-	margin: .4375rem;
-}
-.coral-Dialog-header {
-	position: relative;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	width: 100%;
-	height: 3.125rem;
-	outline: none;
-}
-.coral3-Dialog	{
-	/* display: block; */
-	/* position: fixed; */
-	/* top: 0; */
-	/* left: 0; */
-	/* right: 0; */
-	/* bottom: 0; */
-	overflow-y: auto;
-	overflow-x: hidden;
-	-webkit-transition: opacity 0.35s;
-	-moz-transition: opacity 0.35s;
-	-o-transition: opacity 0.35s;
-	-ms-transition: opacity 0.35s;
-	transition: opacity 0.35s;
-	opacity: 0;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity=0);
-}
-.coral-Youtubesearch-picker .coral3-Dialog-header  {
-	float: right;
+.coral-Youtubesearch-picker .coral-Modal-header .coral-Button {
+    float: left;
+    margin: .4375rem;
 }
 
-.coral-Youtubesearch-picker .coral-Heading {
-	margin: 0 4.375rem;
-	text-align: center;
-	line-height: 3.3125rem;
+.coral-Youtubesearch-picker .coral-Modal-header .coral-Button--primary {
+    float: right;
 }
 
-.coral-Youtubesearch-picker .coral3-Dialog-content{
-	width: 100%;
-	padding: 0;
-	position: absolute;
-	top: 3.3125rem;
-	bottom: 0;
+.coral-Youtubesearch-picker .coral-Modal-title {
+    margin: 0 4.375rem;
+    text-align: center;
+    line-height: 3.3125rem;
 }
-.coral-Dialog.is-open {
-	opacity: 1;
-	-ms-filter: none;
-	filter: none;
-}
-.coral3-Dialog-content {
-	display: block;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: .9375rem;
-	outline: none;
-	word-break: break-word;
+
+.coral-Youtubesearch-picker .coral-Modal-body {
+    width: 100%;
+    padding: 0;
+    position: absolute;
+    top: 3.3125rem;
+    bottom: 0;
 }
 
 .coral-Youtubesearch-picker .coral-TabPanel {
-	height: 100%;
-	margin: 0;
+    height: 100%;
+    margin: 0;
 }
 
 .coral-Youtubesearch-picker .coral-TabPanel-navigation > .coral-TabPanel-tab {
-	min-width: 1.125rem;
+    min-width: 1.125rem;
 }
 
 .coral-Youtubesearch-picker .coral-TabPanel-content {
-	height: 100%;
-	padding: 0;
-	border-width: 0 0 0 .0625rem;
-	border-radius: 0;
+    height: 100%;
+    padding: 0;
+    border-width: 0 0 0 .0625rem;
+    border-radius: 0;
 }
 
 .coral-Youtubesearch-picker .coral-TabPanel-pane {
-	height: 100%;
+    height: 100%;
 }
 
 .coral-Youtubesearch-pickerBar {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	position: relative;
-	border-bottom: solid .0625rem #d1d1d1;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: relative;
+    border-bottom: solid .0625rem #d1d1d1;
 }
 
 .coral-Youtubesearch-pickerBar .coral-Crumbs {
-	margin-left: .9375rem;
+    margin-left: .9375rem;
 }
 
 .coral-Youtubesearch-pickerPanel {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .yt-video-title {
-	font-size: 1.25em;
-	font-weight: bold;
-	padding-bottom: 15px;
+    font-size: 1.25em;
+    font-weight: bold;
+    padding-bottom: 15px;
 }
 
 .yt-video-summary {
-	padding: 25px;
+    padding: 25px;
 }
 
 .yt-video-image {
-	margin-top: 30px;
-	margin-bottom: 10px;
-	margin-left: 10px;
-}
-.coral-Dialog-wrapper {
-	display: block;
-	min-width: 20rem;
-	max-width: 90%;
-	margin: .625rem auto;
-	outline: none;
-	border-radius: .25rem;
-	background-color: #fff;
-}
-.coral3-Backdrop.is-open {
-	opacity: 1;
-	-ms-filter: none;
-	filter: none;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
